--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-tsparticles": "^2.12.2",
+    "recharts": "^2.15.1",
     "tsparticles": "^3.8.1"
   },
   "devDependencies": {
